rename point "x" to "s" to avoid conflict with coordinate "x"

--- a/finite.tex
+++ b/finite.tex
@@ -708,14 +708,14 @@ For \(g\) to be a coordinate transformation, we must have \(b_0 = 1\), and becau
 We can now see see that \(\pi_0 \moduli{fg}\), sometimes called the \index{formal group!coarse moduli}\textit{coarse moduli of formal groups}, is not representable by a scheme.  From \Cref{FGpsOverAlgClosedFields}, we see that there are infinitely many points in \(\pi_0 \moduli{fg}(\F_p)\).  From \Cref{MfglIsSmooth}, we see that these lift along the surjection \(\Z \to \F_p\) to give infinitely many distinct points in \(\pi_0 \moduli{fg}(\Z)\).  On the other hand, by \Cref{RationalGeometricPointsOfMfg} there is a single \(\Q\)--point of the coarse moduli, whereas the \(\Z\)--points of a representable functor would inject into its \(\Q\)--points.  In light of \Cref{ContextOfMUPExample}, this result is no surprise to a topologist: the nonaffine nature of the moduli of formal groups is reflected by \Cref{DefnOfNilpCompletionAndASS} and \Cref{IdentifyingAdamsE2Page} in the nontrivial structure of the \(MU\)--Adams spectral sequence.
 \end{remark}
 
-We now turn to understanding the \index{formal scheme!formal neighborhood}infinitesimal neighborhoods of these geometric points.  In general, for \(x\co \Spec k \to X\) a closed \(k\)--point of a scheme, we defined in \Cref{JetSpacesDefn} and \Cref{DefnCompletion} an infinitesimal neighborhood object \(X^\wedge_x\) with a lifting property
+We now turn to understanding the \index{formal scheme!formal neighborhood}infinitesimal neighborhoods of these geometric points.  In general, for \(s\co \Spec k \to X\) a closed \(k\)--point of a scheme, we defined in \Cref{JetSpacesDefn} and \Cref{DefnCompletion} an infinitesimal neighborhood object \(X^\wedge_s\) with a lifting property
 \begin{center}
 \begin{tikzcd}
-\Spec k \arrow["x"]{r} \arrow{d} & X^\wedge_x \arrow{d} \\
+\Spec k \arrow["s"]{r} \arrow{d} & X^\wedge_s \arrow{d} \\
 \Spf R \arrow{r} \arrow[densely dotted]{ru} & X
 \end{tikzcd}
 \end{center}
-for any infinitesimal thickening \(\Spf R\) of \(\Spec k\).  Thinking of \(X\) as representing a moduli problem, a typical choice for \(\Spf R\) is \(\A^1_k\), and a map \(\A^1_k \to X\) extending \(x\) is a series solution to the moduli problem which constant term \(x\).  In turn, \(X^\wedge_x\) is the smallest object through which all such maps factor, and so we think of it as classifying Taylor expansions of solutions with constant term \(x\).
+for any infinitesimal thickening \(\Spf R\) of \(\Spec k\).  Thinking of \(X\) as representing a moduli problem, a typical choice for \(\Spf R\) is \(\A^1_k\), and a map \(\A^1_k \to X\) extending \(s\) is a series solution to the moduli problem which constant term \(s\).  In turn, \(X^\wedge_s\) is the smallest object through which all such maps factor, and so we think of it as classifying Taylor expansions of solutions with constant term \(s\).
 
 For a formal group \(\Gamma\co \Spec k \to \moduli{fg}\), the definition is formally similar, but actually writing it out is made complicated by \Cref{WarningAboutStacks}.  In particular, \(p\co \Spec k \to X\) may not lift directly through \(\Spf R \to X\), but instead \(\Spec R/\m \to X\) may present \(p\) on a cover \(i\co \Spec R/\m \to \Spec k\).
 
