--- a/quillen.tex
+++ b/quillen.tex
@@ -734,7 +734,7 @@ By taking the \(p\)--fold Cartesian power of the diagram \(X \to Y\), we produce
 \begin{center}
 \begin{tikzcd}[column sep=1em]
 F_0 \arrow{r} & F_1 \arrow{r} & \cdots \arrow{r} & F_{p-1} \arrow{r} & Y^{\sm p} \\
-X^{\sm p} \arrow[equal]{u} & \bigvee X^{\sm (p-1)} \sm (Y/X) \arrow[leftarrow]{u} & \cdots & \bigvee X \sm (Y/X)^{\sm (p-1)} \arrow[leftarrow]{u} & (Y/X)^{\sm p} \arrow[leftarrow]{u}.
+X^{\sm p} \arrow[equal]{u} & \bigvee \left(X^{\sm (p-1)} \sm (Y/X)\right) \arrow[leftarrow]{u} & \cdots & \bigvee \left(X \sm (Y/X)^{\sm (p-1)}\right) \arrow[leftarrow]{u} & (Y/X)^{\sm p} \arrow[leftarrow]{u}.
 \end{tikzcd}
 \end{center}
 We now apply \((-)^{tC_p}\) to this diagram.  The Tate construction carries cofiber sequences of \(C_p\)--spectra to cofiber sequences of spectra, so this is again a filtration diagram.  In the intermediate filtration quotients, the \(C_p\)--action is given by freely permuting wedge factors, from which it follows that the Tate construction vanishes on these nodes.  Hence, the diagram postcomposed with the Tate construction takes the form
