--- a/quillen.tex
+++ b/quillen.tex
@@ -277,7 +277,7 @@ A formal subscheme \(D\) of a formal scheme \(X = \colim_\alpha X_\alpha\) is sa
 There is a scheme \(\Div_n^+ C\) of effective Weil divisors of rank \(n\).  It is a formal variety of dimension \(n\).  In fact, a coordinate \(x\) on \(C\) determines an isomorphism \(\Div_n^+ C \cong \A^n\) where a divisor \(D\) is associated to a monic polynomial \(f_D(x)\) with nilpotent lower-order coefficients.
 \end{lemma}
 \begin{proof}[Proof sketch]
-To pin down the functor we wish to analyze, we make the definition \[\Div_n^+(C)(u\co \Spec T \to S) = \left\{\text{\(D\) an effective divisor on \(u^* C\)} \right\}.\]  To show that this is a formal variety, we pursue the final claim and select a coordinate \(x\) on \(C\), as well as a point \(D \in \Div_n^+(C)(T)\).  The coordinate presents \(u^* C\) as \[u^* C = \Spf T\llbracket x \rrbracket,\] and the characteristic polynomial \(f_D(x)\) of \(x\) in \(\sheaf O_D\) presents \(D\) as the closed subscheme \[D = \Spf T\llbracket x \rrbracket / (f_D(x))\] for \(f_D(x) = x^n + a_{n-1} x^{n-1} + \cdots + a_0\) monic.  Additionally, for any prime ideal \(\p \in T\) we can form the field \(T_{\p} / \p\), over which the module \(\sheaf O_D \otimes_R T_{\p} / \p\) must still be of rank \(n\).  It follows that \[f_D(x) \otimes_R T_{\p} / \p \equiv x^n,\] hence that each \(a_j\) lies in the intersection of all prime ideals of \(T\), hence that each \(a_j\) is nilpotent.
+To pin down the functor we wish to analyze, we make the definition \[\Div_n^+(C)(u\co \Spec T \to S) = \left\{\text{\(D\) an effective divisor on \(u^* C\) of rank \(n\)}\right\}.\]  To show that this is a formal variety, we pursue the final claim and select a coordinate \(x\) on \(C\), as well as a point \(D \in \Div_n^+(C)(T)\).  The coordinate presents \(u^* C\) as \[u^* C = \Spf T\llbracket x \rrbracket,\] and the characteristic polynomial \(f_D(x)\) of \(x\) in \(\sheaf O_D\) presents \(D\) as the closed subscheme \[D = \Spf T\llbracket x \rrbracket / (f_D(x))\] for \(f_D(x) = x^n + a_{n-1} x^{n-1} + \cdots + a_0\) monic.  Additionally, for any prime ideal \(\p \in T\) we can form the field \(T_{\p} / \p\), over which the module \(\sheaf O_D \otimes_R T_{\p} / \p\) must still be of rank \(n\).  It follows that \[f_D(x) \otimes_R T_{\p} / \p \equiv x^n,\] hence that each \(a_j\) lies in the intersection of all prime ideals of \(T\), hence that each \(a_j\) is nilpotent.
 
 In turn, this means that the polynomial \(f_D\) is selected by a map \(\Spec T \to \A^n\).  Conversely, given such a map, we can form the polynomial \(f_D(x)\) and the divisor \(D\).
 \end{proof}
