oops; fix page parity

--- a/preamble.tex
+++ b/preamble.tex
@@ -398,7 +398,7 @@
 % from hood chatham: place relevant spectral sequences on verso-recto pairs
 
 \usepackage{afterpage}
-\def\afterrectopage#1{{\ifodd\thepage\afterpage{#1}\else#1\fi}}
+\def\afterrectopage#1{{\ifodd\thepage#1\else\afterpage{#1}\fi}}
 
 % from hood chatham: an \intertext command that works in tikzcd
 
