fix sheaf of meromorphic functions definition

--- a/quillen.tex
+++ b/quillen.tex
@@ -351,7 +351,7 @@ A divisorial section \(u\) of a line bundle \(\L\) induces an isomorphism \(\L \
 Line bundles which admit divisorial sections are therefore those that arise through our construction above, i.e., those which are controlled by the zero locus of a polynomial.  In keeping with the classical inspiration, we expect generic line bundles to be controlled by the zeroes \emph{and poles} of a rational function, and so we introduce the following class of functions:
 
 \begin{definition}[{\cite[Definition 5.20 and Proposition 5.26]{StricklandFSFG}}]
-The ring of meromorphic functions on \(C\), \(\sheaf{M}_C\), is obtained by inverting all coordinates in \(\sheaf{O}_C\).\footnote{In fact, it suffices to invert any single one~\cite[Lemma 5.21]{StricklandFSFG}.}  Additionally, this can be augmented to a scheme \(\operatorname{Mer}(C, \mathbb G_m)\) of meromorphic functions on \(C\) by \[\operatorname{Mer}(C, \mathbb G_m)(R) := \left\{ (u, f) \middle| \begin{array}{c} u: \Spec R \to S, \\ f \in (\sheaf{M}_{C \times_S \Spec R})^\times \end{array} \right\}.\]
+The ring of meromorphic functions on \(C\), \(\sheaf{M}_C\), is obtained by inverting all coordinates in \(\sheaf{O}_C\).\footnote{In fact, it suffices to invert any single one~\cite[Lemma 5.21]{StricklandFSFG}.}  Additionally, this can be augmented to a scheme \(\operatorname{Mer}(C, \mathbb G_m)\) of meromorphic functions on \(C\) by \[\operatorname{Mer}(C, \mathbb G_m)(u\co \Spec T \to S) := (\sheaf{M}_{u^* C})^\times.\]
 \end{definition}
 
 Thinking of a meromorphic function as the formal expansion of a rational function, we are moved to study the monoidality of \Cref{DivisorialDefn}.
