remove red from A.4

--- a/powerops.tex
+++ b/powerops.tex
@@ -919,12 +919,12 @@ This accounts for both of the mapping sets \[\EinftyRings(M\Spin, \Q \otimes KO)
 
 We want to understand \(\EinftyRings(M\Spin, KO_p)\) and the map \[\EinftyRings(M\Spin, KO_p) \to \EinftyRings(M\Spin, \Q \otimes KO_p).\]  Here is the initial set-up:
 \begin{center}
-\begin{tikzcd}[
+\begin{tikzcd}[column sep=3em,
 execute at end picture={
     \coordinate (glS) at (glS.center);
     \coordinate (Cj) at (Cj.center);
     \coordinate (glKOp) at (glKOp.center);
-    \fill[red,opacity=0.3] 
+    \fill[opacity=0.3] 
         (glS) -- (Cj) -- (glKOp) -- cycle;
     \node[fill=white, fill opacity=0.33, text opacity=1] (A) at ([shift={(225:0.75)}]Cj) {\scriptsize \(A\)};
 }]
@@ -943,11 +943,11 @@ execute at end picture={
         (glS) -- (Cj) -- (glKOp) -- cycle;
     \node[fill=white, fill opacity=0.33, text opacity=1] (A) at ([shift={(225:0.75)}]Cj) {\scriptsize \(A\)};
 }]
-\spin \arrow{r}[description]{j} \arrow[red]{rd} & |[alias=glS]| \gl_1 \S \arrow{r} \arrow[red]{d} \arrow{rd}[description]{\gl_1 \eta_{KO_p}} & |[alias=Cj]| Cj \arrow{d} \\
+\spin \arrow{r}[description]{j} \arrow[very thick]{rd} & |[alias=glS]| \gl_1 \S \arrow{r} \arrow[very thick]{d} \arrow{rd}[description]{\gl_1 \eta_{KO_p}} & |[alias=Cj]| Cj \arrow{d} \\
 & \Susp^{-1} \Q/\Z \otimes \gl_1 KO_p \arrow{r} & |[alias=glKOp]| \gl_1 KO_p \arrow{r} & \Q \otimes \gl_1 KO_p \arrow{r} & \Q/\Z \otimes \gl_1 KO_p.
 \end{tikzcd}
 \end{center}
-There is a canonical red vertical lift of \(\gl_1 \eta_{KO_p}\) since \(\gl_1 \S\) is a torsion spectrum, and this precomposes with \(j\) to give another vertical map.  Notice now that selecting a filler triangle \(A\) gives a commuting square with choice of homotopy and that \([\gl_1 \S, \Q \otimes \gl_1 KO_p] = 0\), and hence we would get a natural map (and natural homotopy) off of the homotopy cofibers:
+There is a canonical bolded vertical lift of \(\gl_1 \eta_{KO_p}\) since \(\gl_1 \S\) is a torsion spectrum, and this precomposes with \(j\) to give another vertical map.  Notice now that selecting a filler triangle \(A\) gives a commuting square with choice of homotopy and that \([\gl_1 \S, \Q \otimes \gl_1 KO_p] = 0\), and hence we would get a natural map (and natural homotopy) off of the homotopy cofibers:
 \begin{center}
 \begin{tikzcd}[column sep=0.7em,
 execute at end picture={
