stray unchanged structure group symbol

--- a/intro.tex
+++ b/intro.tex
@@ -91,7 +91,7 @@ We should also mention that we will specifically \emph{not} discuss the followin
 \begin{itemize}
 \item Analytic techniques will be completely omitted.  Much of modern research stemming from the above problem is an attempt to extend index theory across Witten's genus, or to find a ``geometric cochains'' model of certain elliptic cohomology theories.  These often mean heavy analytic work, and we will strictly confine ourselves to the domain of homotopy theory.
 \item As sort of a sub-point (and despite the motivation provided in this Introduction), we will also mostly avoid manifold geometry.  Again, much of the contemporary research about \(\tmf\) is an attempt to find a geometric model, so that geometric techniques can be imported---including equivariance and the geometry of quantum field theories, to name two.
-\item In a different direction, our focus will not linger on actually computing bordism rings \(MX_*\), nor will we consider geometric constructions on manifolds and their behavior after imaging into the bordism ring.  This is also the source of active research: the structure of the symplectic bordism ring remains, to large extent, mysterious, and what we do understand of it comes through a mix of formal geometry and raw manifold geometry.  This could be a topic that fits logically into this document, were it not for time limitations and the author's inexpertise.
+\item In a different direction, our focus will not linger on actually computing bordism rings \(MG_*\), nor will we consider geometric constructions on manifolds and their behavior after imaging into the bordism ring.  This is also the source of active research: the structure of the symplectic bordism ring remains, to large extent, mysterious, and what we do understand of it comes through a mix of formal geometry and raw manifold geometry.  This could be a topic that fits logically into this document, were it not for time limitations and the author's inexpertise.
 \item The geometry of \(E_\infty\)--rings will also be avoided, at least to the extent possible.  Such objects become inescapable by the conclusion of our story, but there are better resources from which to learn about \(E_\infty\)--rings, and the pre--\(E_\infty\) story is not told so often these days.  So, we will focus on the unstructured part, relegate the \(E_\infty\)--rings to Appendix \ref{PowerOpnsChapter}, and leave their details to other authors.
 \item As a related note, much of the contents of this book could be thought of as foundations for the derived algebraic geometry of even-periodic ring spectra.  We will make absolutely no attempt to set up such a theory here, but we will endeavor to phrase our results in a way that will, hopefully, be forward-compatible with any such theory arising in the future.
 \item There will be plenty of places where we will avoid making statements in maximum generality or with maximum thoroughness.  The story we are interested in telling draws from a blend of many others from different subfields of mathematics, many of which have their own dedicated textbooks.  Sometimes this will mean avoiding stating the most beautiful theorem in a subfield in favor of a theorem we will find more useful.  Other times this will mean abbreviating someone else's general definition to one more specialized to the task at hand.  In any case, we will give references to other sources where you can find these cast in starring roles.
