--- a/powerops.tex
+++ b/powerops.tex
@@ -192,11 +192,11 @@ The proof of this Theorem requires a very involved algebraic calculation (which 
 As described above, the permutation representation gives a natural map \(B\Sigma_j \to BU(j)\), which participates in the following square:
 \begin{center}
 \begin{tikzcd}
-E^0 BU(j) \arrow{r} \arrow["\simeq"]{d} & E^0 B\Sigma_j / I_{\Tr} \arrow["\mathrm{inj.}"]{r} & C_0 \otimes E^0 B\Sigma_j \arrow["\simeq"]{d} / I_{\Tr} \\
+E^0 BU(j) \arrow{r} \arrow["\simeq", leftarrow]{d} & E^0 B\Sigma_j / I_{\Tr} \arrow["\mathrm{inj.}"]{r} & C_0 \otimes E^0 B\Sigma_j \arrow["\simeq", leftarrow]{d} / I_{\Tr} \\
 \sheaf O(\Div_j^+ \CP^\infty_E) \arrow["\mathrm{surj.}"]{r} & \sheaf O(\Sub_j \CP^\infty_E) \arrow["\mathrm{inj.}"]{r} \arrow[densely dotted]{u} & \sheaf O(\Sub_j \Lambda^*).
 \end{tikzcd}
 \end{center}
-The left-hand isomorphism is stated in \Cref{IdentificationOfBUnWithDivn}; the right-hand isomorphism is the content of the previous paragraph; the bottom-left horizontal map is surjective because subgroup divisors form a closed subscheme of all divisors; the top horizontal map is an injection by a difficult theorem of Strickland~\cite[Theorems 8.5--6]{StricklandEthyOfBSigma}; and the bottom horizontal map is an injection by a second difficult theorem of Strickland~\cite[Theorem 10.1]{StricklandFiniteSubgps}.  In fact, the two difficult theorems say more: they show that the two terms are finite and free of equal rank.  Altogether, these can be used to define the middle vertical map: any element in the bottom can be preimaged along the surjection, pulled upward along the isomorphism, and pushed back down along the map induced by the regular representation.  One quickly checks that this gives an injective $E^0$--algebra homomorphism.
+The left-hand isomorphism is stated in \Cref{IdentificationOfBUnWithDivn}; the right-hand isomorphism is the content of the previous paragraph; the bottom-left horizontal map is surjective because subgroup divisors form a closed subscheme of all divisors; the top horizontal map is an injection by a difficult theorem of Strickland~\cite[Theorems 8.5--6]{StricklandEthyOfBSigma}; and the bottom horizontal map is an injection by a second difficult theorem of Strickland~\cite[Theorem 10.1]{StricklandFiniteSubgps}.  In fact, the two difficult theorems say more: they show that the two terms are finite and free of equal rank.  Altogether, these can be used to define the middle vertical map: any element in the bottom can be preimaged along the surjection, translated along the isomorphism, and pushed back down along the map induced by the regular representation.  One quickly checks that this gives a well-defined injective $E^0$--algebra homomorphism.
 
 What remains to show, then, is that this last injection is an isomorphism, whether by calculating the relevant determinant~\cite[Section 7.9]{SchlankStapleton} or by explicitly analyzing a generating element in terms of Euler classes~\cite[Theorem 9.2]{StricklandEthyOfBSigma}.
 \end{proof}
