clarify notation around 1_R and 1_C post 2.4.14

--- a/quillen.tex
+++ b/quillen.tex
@@ -801,8 +801,8 @@ T(\xi(\Sigma_n)) & = T(\xi^{\oplus n}_{h\Sigma_n}) \tag{definition} \\
 Applying the Lemma to the universal case produces a factorization \[MU(k)^{\sm n} \to MU(k)^{\sm n}_{h\Sigma_n} \to MU(nk)\] of the unstable multiplication map, and hence a stable factorization \[MU^{\sm n} \to MU^{\sm n}_{h\Sigma_n} \xrightarrow{\mu_n} MU.\]  In fact, this enriches to an \(H_\infty^2\) structure: by applying \Cref{ThomSpectrumOfAssocBundle} in reverse, the basic construction is
 \begin{align*}
 \mu_{2,2}\co \S^2_{h\Sigma_2} \sm MU^{\sm 2}_{h\Sigma_2} & \xrightarrow{1 \sm \mu_2} \S^2_{h\Sigma_2} \sm MU \\
-& \simeq T(1_{\R}(2) \downarrow *) \sm MU \tag{\Cref{ThomSpectrumOfAssocBundle}} \\
-& \simeq T(1_{\C} \downarrow *) \sm MU \tag{\(MU\)--Thom isomorphism} \\
+& \simeq T(\mathrm{triv}_{\R}(\Sigma_2) \downarrow *) \sm MU \tag{\Cref{ThomSpectrumOfAssocBundle}} \\
+& \simeq T(\mathrm{triv}_{\C} \downarrow *) \sm MU \tag{\(MU\)--Thom isomorphism} \\
 & \simeq \S^2 \sm MU. \tag{Thom spectrum of \(1_{\C}\)}
 \end{align*}
 Our goal in the next Lecture will be to gain a computational understanding of \(\mu_{n,2d}\).
