fix missing reduced tilde

--- a/quillen.tex
+++ b/quillen.tex
@@ -406,7 +406,7 @@ The first claim is justified by the naturality of \Cref{GeneralThomIsom}, the se
 We use these properties to work the following Example, which connects Thom sheaves with the major players from \Cref{FormalVarietiesLecture}.
 
 \begin{example}[{\cite[Section 8]{AHSHinfty}}]\label{Pi2AndInvariantDiffls}
-Take \(\L\) to be the \index{canonical bundle}canonical line bundle over \(\CP^\infty\).  Using the same mode of argument as in \Cref{RPnThomExample}, the zero-section \[\Susp^\infty \CP^\infty \xrightarrow{\simeq} T_2(\L)\] gives an identification \[E^0 \CP^\infty \supseteq \widetilde E^0 \CP^\infty \xleftarrow{\simeq} E^0 T_2(\L)\] of \(E^0 T_2(\L)\) with the augmentation ideal in \(E^0 \CP^\infty\).  At the level of Thom sheaves, this gives an isomorphism \[\sheaf I(0) \xleftarrow{\simeq} \ThomSheaf{\L}\] of \(\ThomSheaf{\L}\) with the sheaf of functions vanishing at the origin of \(\CP^\infty_E\).  Pulling \(\L\) back along \[0\co * \to \CP^\infty\] gives a line bundle over the one-point space, which on Thom spectra gives the inclusion \[\Susp^\infty \CP^1 \to \Susp^\infty \CP^\infty.\]  Stringing many results together, we can now calculate:%
+Take \(\L\) to be the \index{canonical bundle}canonical line bundle over \(\CP^\infty\).  Using the same mode of argument as in \Cref{RPnThomExample}, the zero-section \[\Susp^\infty \CP^\infty \xrightarrow{\simeq} T_2(\L)\] gives an identification \[E^0 \CP^\infty \supseteq \widetilde E^0 \CP^\infty \xleftarrow{\simeq} E^0 T_2(\L)\] of \(\widetilde E^0 T_2(\L)\) with the augmentation ideal in \(E^0 \CP^\infty\).  At the level of Thom sheaves, this gives an isomorphism \[\sheaf I(0) \xleftarrow{\simeq} \ThomSheaf{\L}\] of \(\ThomSheaf{\L}\) with the sheaf of functions vanishing at the origin of \(\CP^\infty_E\).  Pulling \(\L\) back along \[0\co * \to \CP^\infty\] gives a line bundle over the one-point space, which on Thom spectra gives the inclusion \[\Susp^\infty \CP^1 \to \Susp^\infty \CP^\infty.\]  Stringing many results together, we can now calculate:%
 \footnote{The identification \(0^* \sheaf I(0) = \sheaf I(0) / \sheaf I(0) \cdot \sheaf I(0)\) deserves further explanation.  The functor \(0^*\) is right-exact, so sends the short exact sequence \[0 \to \sheaf I(0)^2 \to \sheaf I(0) \to \sheaf I(0) / \sheaf I(0)^2 \to 0\] to a right-exact sequence, and we need only check that the map \(0^* \sheaf I(0)^2 \to 0^* \sheaf I(0)\) is zero.  This is the statement that a function vanishing to second order also has vanishing first derivative.}
 \begin{align*}
 \widetilde{\pi_2 E} & \cong \widetilde{E^0 \CP^1} \tag{\(S^2 \simeq \CP^1\)} \\
