fix grading issue in 1.5.7

--- a/mo.tex
+++ b/mo.tex
@@ -809,8 +809,8 @@ Because we assumed \(b_0 = 1\) and \(f_{\mathrm{typ}}\) is concentrated in power
 \begin{proof}
 Set \(M = \F_2[a_j \mid j \ne 2^k - 1]\), and write \(\mathcal AP_0'\) for the ring of functions on \(\InternalAut_1(\G_a)\).  It follows from \Cref{CotensorReducesCofreeness} applied to \Cref{CalculationOfAutGaActionOnMO} that the \(\InternalAut_1(\G_a)\)--cohomology of \(\HFtwo P_0(MO)\) has amplitude \(0\):
 \begin{align*}
-\Cotor_{\mathcal AP_0'}^{*, *}(\F_2, \HFtwo P_0(MO)) & = \Cotor_{\mathcal AP_0'}^{*, *}(\F_2, \mathcal A_* \otimes_{\F_2} M) \\
-& = \F_2 \cotensor_{\mathcal A_*} (\mathcal A_* \otimes_{\F_2} M) \\
+\Cotor_{\mathcal AP_0'}^{*, *}(\F_2, \HFtwo P_0(MO)) & = \Cotor_{\mathcal AP_0'}^{*, *}(\F_2, \mathcal AP_0' \otimes_{\F_2} M) \\
+& = \F_2 \cotensor_{\mathcal AP_0'} (\mathcal AP_0' \otimes_{\F_2} M) \\
 & = \F_2 \otimes_{\F_2} M = M.
 \end{align*}
 Since the Adams spectral sequence \[H^*_{\mathrm{gp}}(\InternalAut_1(\G_a); \HFtwo P_0(MO)) \Rightarrow \pi_* MO\] is concentrated on the \(0\)--line, it collapses.  We can infer the grading from the residual \(\Gm\)--action: \[f_{\mathrm{rest}}(x) \mapsto \xi_0^{-1} f_{\mathrm{rest}}(\xi_0 x) = \sum_{j \ne 2^k} \xi_0^{j-1} a_{j-1} x^j.\]  We therefore deduce \[\pi_* MO = \F_2[a_j \mid j \ne 2^k-1]. \qedhere\]
