formula for the natural cubical structure in terms of sigma

--- a/sigma.tex
+++ b/sigma.tex
@@ -1063,7 +1063,7 @@ Zero locus & \(-q^{1+2\Z}\) & \(q^{1+2\Z}\) & \(-q^{2\Z}\) & \(q^{2\Z}\) \\
 \caption{Standard \(\theta\)--functions and their offsets}\label{ThetaFunctionsTable}
 \end{figure}
 
-\begin{remark}
+\begin{remark}\label{EllipticFunctionsHaveWeierstrassPresentation}
 This embedding of \(E_\Lambda\) as an intersection of quadric surfaces in \(\CP^3\) is quite different from the Weierstrass embedding.  Nonetheless, the embeddings are analytically related.  Namely, there is an equality \[\frac{\mathrm d^2}{\mathrm dz^2} \log \theta_q(u) = \wp_\Lambda(z).\]  Separately, Weierstrass considered a function \(\sigma_\Lambda\), defined by \[\sigma_\Lambda(z) = z \prod_{\omega \in \Lambda \setminus 0} \left( 1 - \frac{z}{\omega} \right) \cdot \exp \left[ \frac{z}{\omega} + \frac{1}{2} \left( \frac{z}{\omega} \right)^2 \right],\] which also has the property that its second logarithmic derivative is \(\wp\) and so is ``basically \(\theta_q^{1/2,1/2}\)''.  In fact, any meromorphic function on the elliptic curve $E_\Lambda$ can be written in the form \[c \cdot \prod_{i=1}^n \frac{\sigma_\Lambda(z - a_i)}{\sigma_\Lambda(z - b_i)}.\]
 \end{remark}
 
@@ -1256,7 +1256,7 @@ For a generalized elliptic curve \(C\), there is a canonical\footnote{Canonical,
 \end{theorem}
 
 \begin{corollary}\label{D3thetaTrivializes}
-The trivializing section \(s\) associated to \(C_{\Tate}\) is given by \(\delta^{\circ 3} \tilde \theta\), where \(\tilde \theta_q\) is a slight modification of the classical \(\theta\)--function:
+The trivializing section \(s\) associated to \(C_{\Tate}\) is given by \(\delta^{\circ 3} \tilde \theta\), where \(\tilde \theta_q\) is a slight modification of the classical \(\theta\)--function:\footnote{Over \(\C\), we can also identify this in terms of the Weierstrass \(\sigma\)--function: for any choice of \(x, y \in C_\Lambda\), Abel's Theorem guarantees the existence of a rational function \(f(x, y, z)\) with simple poles at \(x\) and \(y\) and simple roots at \(-(x+y)\) and \(0\).  This function is unique up to scale, and in fact the fraction \(\frac{f(x,y,z)}{f(x,y,0)}\) determines a cubical structure on \(C_\Lambda\).  Abbreviating \(\sigma_\Lambda\) to just \(\sigma\), \Cref{EllipticFunctionsHaveWeierstrassPresentation} gives a formula \(f(x,y,z) = \frac{\sigma(x+y)\sigma(x+z)}{\sigma(x+y+z)\sigma(z)}\), from which it follows that \(\frac{\sigma(x+y)\sigma(y+z)\sigma(z+x)\sigma(0)}{\sigma(x)\sigma(y)\sigma(z)\sigma(x+y+z)}\) gives a formula for the associated cubical structure.}
 \begin{align*}
 \tilde \theta_q(u) & = (1 - u)\prod_{n > 0}(1 - q^n u)(1 - q^n u^{-1}), &
 \tilde \theta_q(qu) & = -u^{-1} \tilde\theta_q(u).
