kill a definitely dead todo

--- a/characters.tex
+++ b/characters.tex
@@ -903,7 +903,7 @@ When \(n=1\) and \(X = *\) the character map produces a \(p\)--complete version 
 \[
 KU_{p}^{0}(BG) \xrightarrow{} \mathrm{Cl}(G_{p}^{1}, C_0),
 \]
-where \(C_0\) is the maximal ramified extension of \(\Q_p\) discussed in \Cref{padicktheory}.  This map is injective.  Above height \(1\), though, this is not generally true~\cite{Kriz}, but it \emph{is} true for $G = \Sigma_n$~\cite[Theorem 7.3]{HKR}, which is enough to conclude that $E^0 B\Sigma_n$ is free of finite rank.\todo{Did I get this right?}
+where \(C_0\) is the maximal ramified extension of \(\Q_p\) discussed in \Cref{padicktheory}.  This map is injective.  Above height \(1\), though, this is not generally true~\cite{Kriz}, but it \emph{is} true for $G = \Sigma_n$~\cite[Theorem 7.3]{HKR}, which is enough to conclude that $E^0 B\Sigma_n$ is free of finite rank.
 \end{example}
 
 \begin{remark}
