fix an observation of dexter's

--- a/quillen.tex
+++ b/quillen.tex
@@ -801,9 +801,8 @@ T(\xi(\Sigma_n)) & = T(\xi^{\oplus n}_{h\Sigma_n}) \tag{definition} \\
 Applying the Lemma to the universal case produces a factorization \[MU(k)^{\sm n} \to MU(k)^{\sm n}_{h\Sigma_n} \to MU(nk)\] of the unstable multiplication map, and hence a stable factorization \[MU^{\sm n} \to MU^{\sm n}_{h\Sigma_n} \xrightarrow{\mu_n} MU.\]  In fact, this enriches to an \(H_\infty^2\) structure~(\cite[Section 3.2]{JohnsonNoel}, \cite[Corollary VIII.5.3]{BMMS}): by applying \Cref{ThomSpectrumOfAssocBundle} in reverse, the construction is
 \begin{align*}
 \mu_{n,2q}\co \S^{2qn}_{h\Sigma_n} \sm MU^{\sm n}_{h\Sigma_n} & \xrightarrow{1 \sm \mu_n} \S^{2qn}_{h\Sigma_n} \sm MU \\
-& \simeq T(\mathrm{triv}^{\oplus q}(\Sigma_n) \downarrow * \mmod \Sigma_n) \sm MU \tag{\Cref{ThomSpectrumOfAssocBundle}} \\
-& \simeq T(\mathrm{triv}^{\oplus (qn)} \downarrow * \mmod \Sigma_n) \sm MU \tag{Thom isomorphism} \\
-& \simeq \Sigma^{2qn}_+ B\Sigma_n \sm MU \tag{\Cref{TrivialBundleThomExample}} \\
+& \simeq T(\mathrm{triv}^{\oplus q}(\Sigma_n) \downarrow B\Sigma_n) \sm MU \tag{\Cref{ThomSpectrumOfAssocBundle}} \\
+& \simeq \Sigma^{2qn}_+ B\Sigma_n \sm MU \tag{Thom isomorphism} \\
 & \to \Sigma^{2qn} MU. \tag{project to basepoint}
 \end{align*}
 In the next Lecture we will pursue a computational understanding of \(\mu_{n,2q}\).
